--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
     "version":2,
-    "builds" :[{"src":"./App.js" ,"use":"@vercel/node"}],
-    "routes":[{"src":"./(.*)","dest":"/"}]
+    "builds" :[{"src": "api/App.js",
+    "use": "@vercel/node"}],
+    "routes":[{"src": "/(.*)",
+    "dest": "api/App.js"}]
 }
